@@ -521,6 +521,13 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
+name|tableDesc
+name|keyTableDesc
+decl_stmt|;
+name|tableDesc
+index|[]
+name|valueTableDesc
+decl_stmt|;
 specifier|public
 name|void
 name|configure
@@ -692,14 +699,13 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-name|tableDesc
 name|keyTableDesc
-init|=
+operator|=
 name|gWork
 operator|.
 name|getKeyDesc
 argument_list|()
-decl_stmt|;
+expr_stmt|;
 name|inputKeyDeserializer
 operator|=
 operator|(
@@ -736,6 +742,20 @@ operator|.
 name|getObjectInspector
 argument_list|()
 expr_stmt|;
+name|valueTableDesc
+operator|=
+operator|new
+name|tableDesc
+index|[
+name|gWork
+operator|.
+name|getTagToValueDesc
+argument_list|()
+operator|.
+name|size
+argument_list|()
+index|]
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -758,9 +778,11 @@ operator|++
 control|)
 block|{
 comment|// We should initialize the SerDe with the TypeInfo when available.
-name|tableDesc
 name|valueTableDesc
-init|=
+index|[
+name|tag
+index|]
+operator|=
 name|gWork
 operator|.
 name|getTagToValueDesc
@@ -770,7 +792,7 @@ name|get
 argument_list|(
 name|tag
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|inputValueDeserializer
 index|[
 name|tag
@@ -784,6 +806,9 @@ operator|.
 name|newInstance
 argument_list|(
 name|valueTableDesc
+index|[
+name|tag
+index|]
 operator|.
 name|getDeserializerClass
 argument_list|()
@@ -801,6 +826,9 @@ argument_list|(
 literal|null
 argument_list|,
 name|valueTableDesc
+index|[
+name|tag
+index|]
 operator|.
 name|getProperties
 argument_list|()
@@ -1201,6 +1229,32 @@ throw|throw
 operator|new
 name|HiveException
 argument_list|(
+literal|"Unable to deserialize reduce input key from "
+operator|+
+name|Utilities
+operator|.
+name|formatBinaryString
+argument_list|(
+name|keyWritable
+operator|.
+name|get
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+name|keyWritable
+operator|.
+name|getSize
+argument_list|()
+argument_list|)
+operator|+
+literal|" with properties "
+operator|+
+name|keyTableDesc
+operator|.
+name|getProperties
+argument_list|()
+argument_list|,
 name|e
 argument_list|)
 throw|;
@@ -1214,11 +1268,11 @@ name|hasNext
 argument_list|()
 condition|)
 block|{
-name|Writable
+name|BytesWritable
 name|valueWritable
 init|=
 operator|(
-name|Writable
+name|BytesWritable
 operator|)
 name|values
 operator|.
@@ -1260,6 +1314,45 @@ throw|throw
 operator|new
 name|HiveException
 argument_list|(
+literal|"Unable to deserialize reduce input value (tag="
+operator|+
+name|tag
+operator|.
+name|get
+argument_list|()
+operator|+
+literal|") from "
+operator|+
+name|Utilities
+operator|.
+name|formatBinaryString
+argument_list|(
+name|valueWritable
+operator|.
+name|getBytes
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+name|valueWritable
+operator|.
+name|getLength
+argument_list|()
+argument_list|)
+operator|+
+literal|" with properties "
+operator|+
+name|valueTableDesc
+index|[
+name|tag
+operator|.
+name|get
+argument_list|()
+index|]
+operator|.
+name|getProperties
+argument_list|()
+argument_list|,
 name|e
 argument_list|)
 throw|;
