@@ -4155,6 +4155,87 @@ name|loader
 argument_list|)
 expr_stmt|;
 block|}
+specifier|public
+specifier|static
+name|String
+name|formatBinaryString
+parameter_list|(
+name|byte
+index|[]
+name|array
+parameter_list|,
+name|int
+name|start
+parameter_list|,
+name|int
+name|length
+parameter_list|)
+block|{
+name|StringBuilder
+name|sb
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+name|start
+init|;
+name|i
+operator|<
+name|start
+operator|+
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|"x"
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+name|array
+index|[
+name|i
+index|]
+operator|<
+literal|0
+condition|?
+name|array
+index|[
+name|i
+index|]
+operator|+
+literal|256
+else|:
+name|array
+index|[
+name|i
+index|]
+operator|+
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|sb
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
 block|}
 end_class
 
